--- a/index.html
+++ b/index.html
@@ -46,21 +46,22 @@
             <div class="article">
             <div class="ordered">
                 <h2>Contact me!</h2>
+                <hr>
                 <!-- ordered list for contact me --->
                 <ol>
-                <li><div class="">
+                <li><div>
                         <a href="https://github.com/James-Sobeck" target="_blank" ><!-- link to the website--->
                         <img src="./images/github.png" alt="" width="50px" height="50px"/><!-- link to the picture--->
                         <h2>Github</h2><!-- text for the link --->
                         </a>
                 </div></li>
-                <li><div class="">
+                <li><div>
                        <a href="https://www.linkedin.com/in/jamessobeck/" target="_blank" ><!-- link to the website--->
                         <img src="./images/linkedin.png" alt="" width="50px" height="50px"/><!-- link to the picture--->
                         <h2>Linkedin</h2> <!-- text for the link --->
                         </a>
                 </div></li>
-                <li><div class="">
+                <li><div>
                         <a href="mailto:sobeckjames@gmail.com?subject=feedback" ><h2>Email me!</h2></a>
                 </div></li>
                 </ol>
