--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <main class="wrap">
             <div class="picture">
-                <img src="./images/headshot.jpg" alt="" width="150px" height="150px" style="border-radius: 15%"/>
+                <img src="./images/headshot.jpg" alt="" width="150" height="150" style="border-radius: 15%"/>
                 <!-- headshot--->
                 <h3>James Sobeck</h3>
                 <h2 style="font-size: 1rem">Student</h2>
