--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <hr>
             <section>
                 <div class="article">
-                    <!-- INFO--->
+                    <!-- INFO-->
                     <h1>Hello! I am James Sobeck</h1>
                     <p>I am a student living in Mobile, Alabama</p>
-                    <p>As a student I am interest in:</p><!-- unordered list--->
+                    <p>As a student I am interest in:</p><!-- unordered list-->
                     <ul class="unordered">
                         <li>Software Development</li>
                         <li>Game Design</li>
@@ -30,7 +30,7 @@
             <hr>
             <article>
                 <div class="article" >
-                    <!-- About Me paragraphs--->
+                    <!-- About Me paragraphs-->
                     <p>As a current student it is important that I take steps
                     to better<br> myself whenever possible and web design is my
                     first step! <br>As a new student at Thinkful I am very excited
@@ -42,23 +42,23 @@
 
                 </div>
             </article>
-            <hr><!-- below div is for the formating to allow the wrap to be centered --->
+            <hr><!-- below div is for the formating to allow the wrap to be centered -->
             <div class="article">
             <div class="ordered">
                 <h2>Contact me!</h2>
                 <hr>
-                <!-- ordered list for contact me --->
+                <!-- ordered list for contact me -->
                 <ol>
                 <li><div>
-                        <a href="https://github.com/James-Sobeck" target="_blank" ><!-- link to the website--->
-                        <img src="./images/github.png" alt="" width="50px" height="50px"/><!-- link to the picture--->
-                        <h2>Github</h2><!-- text for the link --->
+                        <a href="https://github.com/James-Sobeck" target="_blank" ><!-- link to the website-->
+                        <img src="./images/github.png" alt="" width="50" height="50"/><!-- link to the picture-->
+                        <h2>Github</h2><!-- text for the link -->
                         </a>
                 </div></li>
                 <li><div>
-                       <a href="https://www.linkedin.com/in/jamessobeck/" target="_blank" ><!-- link to the website--->
-                        <img src="./images/linkedin.png" alt="" width="50px" height="50px"/><!-- link to the picture--->
-                        <h2>Linkedin</h2> <!-- text for the link --->
+                       <a href="https://www.linkedin.com/in/jamessobeck/" target="_blank" ><!-- link to the website-->
+                        <img src="./images/linkedin.png" alt="" width="50" height="50"/><!-- link to the picture-->
+                        <h2>Linkedin</h2> <!-- text for the link -->
                         </a>
                 </div></li>
                 <li><div>
@@ -66,7 +66,7 @@
                 </div></li>
                 </ol>
             </div></div>
-<!-- Copyright Section--->
+<!-- Copyright Section-->
         <footer>
             Made by James Sobeck 2021.
         </footer>
