--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <main class="wrap">
             <div class="picture">
                 <img src="./images/headshot.jpg" alt="" width="150" height="150" style="border-radius: 15%"/>
-                <!-- headshot--->
+                <!-- headshot-->
                 <h3>James Sobeck</h3>
                 <h2 style="font-size: 1rem">Student</h2>
             </div>
